# cs1302-code-visualizer

./: .gitignore  LICENSE  README.md  browser_driver.py  interface.py  main.py  pyproject.toml  trace_generator.py
cs1302_code_visualizer/: __init__.py  breakpoint_lister.py  browser_driver.py  trace_generator.py
cs1302_code_visualizer/frontend/: package-lock.json  package.json  render-trace.html  tsconfig.json  webpack.config.js
cs1302_code_visualizer/frontend/css/: opt-frontend.css  pytutor.css
cs1302_code_visualizer/frontend/embed/js/: iframe-embed.js
cs1302_code_visualizer/frontend/js/: CodeVisualizer.ts  footer-html.ts  opt-frontend.ts  opt-shared-sessions.ts  opt-testcases.ts  pytutor.ts  render-trace.ts  visualize.ts
frontend/: pytutor-customizations.js
frontend/OnlinePythonTutor/v3/css/: pytutor.css
frontend/OnlinePythonTutor/v3/js/: pytutor.js
frontend/OnlinePythonTutor/v3/js/togetherjs/togetherjs/: togetherjsPackage.js
frontend/embed/js/: iframe-embed.js  opt-frontend-common.js
