[project]
name = "cs1302-code-visualizer"
version = "0.1.2"
description = "Visualize Java program memory state and output a screenshot."
authors = [
    {name = "Gabe Livengood", email = "timothy.livengood@uga.edu"},
]
maintainers = [
    {name = "Michael E. Cotterell", email = "mepcott@uga.edu"},
    {name = "Bradley J. Barnes", email = "bjb211@uga.edu"},
]
license = "MIT"
license-files = [
    "LICEN[CS]E*",
    "cs1302_code_visualizer/backend/LICENSE",
    "cs1302_code_visualizer/frontend/LICENSE",
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "halo>=0.0.31",
    "pillow>=11.2.1",
    "platformdirs>=4.3.8",
    "requests>=2.32.4",
    "selenium>=4.33.0",
]

[project.scripts]
trace_generator = "cs1302_code_visualizer.trace_generator:main"
browser_driver = "cs1302_code_visualizer.browser_driver:main"
render_image = "cs1302_code_visualizer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
