[project]
name = "cs1302-code-visualizer"
version = "0.1.43"
description = "Visualize Java program memory state and output a screenshot."
authors = [
    {name = "Gabe Livengood", email = "timothy.livengood@uga.edu"},
]
maintainers = [
    {name = "Michael E. Cotterell", email = "mepcott@uga.edu"},
    {name = "Bradley J. Barnes", email = "bjb211@uga.edu"},
]
license = "MIT"
license-files = [
    "LICEN[CS]E*",
    "cs1302_code_visualizer/frontend/LICENSE",
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "halo>=0.0.31",
    "pillow>=11.2.1",
    "platformdirs>=4.3.8",
    "requests>=2.32.4",
    "selenium>=4.33.0",
]

[tool.cs1302-code-visualizer]
tracer-url  = "https://github.com/cs1302uga/cs1302-tracer/releases/download/v1.0.8/code-tracer.jar"
tracer-sha256 = "a067c1c4cb101bcec54b4dc29976a18b77d3ae7b6834269bf48cac2bc795c077"

[project.scripts]
generate_trace = "cs1302_code_visualizer.trace_generator:main"
generate_visualization = "cs1302_code_visualizer.browser_driver:main"
list_breakpoints = "cs1302_code_visualizer.breakpoint_lister:main"
render_image = "cs1302_code_visualizer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "scripts/webpack_hook.py"
